# atsamx7x-pac

./: .gitignore  Cargo.toml  Makefile.toml  README.md  svdmap.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-plz.yml
docs/: development.md
pac/templates/: Cargo.toml.template  README.md.template  build.rs.template
pac/templates/src/: lib.rs.template
svd/: ATSAMRH71F20C.svd  ATSAMV71Q21RT.svd
tools/: pacs.py
