[workspace]

members = [
#    "tools/harvester",
    "pac/*",
]

default-members = [
    "pac/*"
]

exclude = [
    "pac/templates"
]

[workspace.package]
version = "0.29.0-alpha1"
license = "MIT OR Apache-2.0"
authors = ["Michal Fita <4925040+michalfita@users.noreply.github.com>"]
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["no-std", "arm", "cortex-m", "atsam", "pac"]
repository = "https://github.com/atsams-rs/atsamx7x-rust"
edition = "2021"
rust-version = "1.65.0"

[workspace.dependencies]
